Updated Map Archive and Registration Documents for ALS8 Sprint 2

--- a/ALS8.html
+++ b/ALS8.html
@@ -716,7 +716,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tab-content" id="sprint2" data-prize-ineligibles="2" data-prize-winners="8">
+            <div class="tab-content" id="sprint2" data-prize-ineligibles="0" data-prize-winners="8">
                 <div class="sub-row">
                     <div class="nav-group notes" aria-label="Notes section" role="region">
                         <div class="nav-group__title">
@@ -724,18 +724,15 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>TBD</li>
+                                <li>Participant "theNagraj" registered but ineligible for prize due to lack of sufficient ranked 1v1s (46/100).</li>
                             </ul>
                         </div>
                     </div>
                     <div class="buttons-container">
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Registration.ods" target="_blank" download>Registration</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Seeding_Summary.ods" target="_blank" download>Seeding Summary</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Seeding_Apparent.ods" target="_blank" download>Seeding Apparent</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Seeding_Full.ods" target="_blank" download>Seeding Full</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Round_by_Round.ods" target="_blank" download>Roundwise</a>
-                        <a href="#" target="_blank">Live Scoreboard</a>
-                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS7_Resources/Sprint2/Results.ods" target="_blank" download>Results</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS8_Resources/Sprint2/Registration.ods" target="_blank" download>Registration</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS8_Resources/Sprint2/Seeding.ods" target="_blank" download>Seeding</a>
+                        <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTywVx5DskPrejThabjiHuGYLU841gOIe0bsxqGb3SPKbHgLWXUF7X_S2zkPfCgOyDBBUL8t5d2Vjyv/pubhtml?gid=1044429528" target="_blank">Live Scoreboard</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS8_Resources/Sprint2/Results.ods" target="_blank" download>Results</a>                 
                     </div>
                     <div class="nav-group seeding" aria-label="Seeding section" role="region">
                         <div class="nav-group__title">
