Added ALS9 Webpage

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         .nav-group.seasons a {
-            height: 140px;
+            height: 112px;
             padding: 3px;
             width: 90%;
             display: flex;
@@ -91,6 +91,7 @@
         .nav-group.seasons a:nth-child(6) { background-image: url('images/ALS6_Banner.jpg'); }
         .nav-group.seasons a:nth-child(7) { background-image: url('images/ALS7_Banner.jpg'); }
         .nav-group.seasons a:nth-child(8) { background-image: url('images/ALS8_Banner.jpg'); }
+        .nav-group.seasons a:nth-child(9) { background-image: url('images/ALS9_Banner.jpg'); }
     </style>
 </head>
 <body>
@@ -172,6 +173,7 @@
                 <a href="ALS6.html">ALS6</a>
                 <a href="ALS7.html">ALS7</a>
                 <a href="ALS8.html">ALS8</a>
+                <a href="ALS9.html">ALS9</a>
             </div>
         </section>
     </div>
