--- a/ALS9.html
+++ b/ALS9.html
@@ -43,7 +43,8 @@
                     <li>Winner Selection Independent of Skill, Depends Only On Participation and Performance</li>
                     <li>Payout Calculation to Winners Depends on Performance, With Bias Toward Higher Skill & Higher Participation</li>
                     <li>Standard Victory Conditions</li>
-                    <li>Theme: SUPER RANDOM (Hyperrandom, and perhaps PocketRandom and BiomeBlitz if they are ready in time)</li>
+                    <li>Theme: SUPER RANDOM (Hyperrandom)</li>
+                    <li>BiomeBlitz and PocketRandom (though included in definitions) were not ready in time</li>
                 </ul>
             </div>
         </div>
@@ -67,58 +68,58 @@
                     </tr>
                     <tr>
                         <td>1</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                                         <tr>
                         <td>9</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                                         <tr>
                         <td>10</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                                         <tr>
                         <td>11</td>
-                        <td>TBD</td>
-                        <td>TBD</td>
+                        <td>Hyperrandom</td>
+                        <td>Zetnus</td>
                     </tr>
                 </table>
             </div>
