Updated ALS9 Webpage & Documentation

--- a/ALS9.html
+++ b/ALS9.html
@@ -36,8 +36,8 @@
                 <ul>
                     <li>Duel (1v1)</li>
                     <li>Unique Round Robin System</li>
-                    <li>Three Independently-Scored Sprints with 3, 3, and 5 Round Each. Each Round is Play-All-Two or Play-All-Three (Player-Choice)</li>
-                    <li>Sprints 1 & 2 Have ~20% Player Prize Pool Each</li>
+                    <li>Three Independently-Scored Sprints with 2, 2, and 6 Round Each. Each Round is Play-All-Two or Play-All-Three (Player-Choice)</li>
+                    <li>Sprints 1 & 2 Have 14% and 20% of Total Prize Pool, Respectively</li>
                     <li>Players Matched Against Nearest Available Opponents, Minimizing Skill Gap</li>
                     <li>Player Performance Calculated by Comparing Actual Win Rate Against Theoretical Win Rate</li>
                     <li>Winner Selection Independent of Skill, Depends Only On Participation and Performance</li>
@@ -51,9 +51,9 @@
 
         <div class="nav-group reference-links" aria-label="Reference links section" role="region">
             <a class="resource-link" data-file="#" download>No Map Contest</a>
-            <a href="#" target="_blank">Map Draft</a>
+            <a href="#" target="_blank">No Map Draft</a>
             <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
-            <a href="#" target="_blank">Civilization Draft</a>
+            <a href="https://aoe2cm.net/preset/HqkjX" target="_blank">Civilization Draft</a>
             <a href="https://forms.gle/1LDUBw6x2HS1QMfJA" target="_blank">Sign Up</a>
             <a href="https://docs.google.com/spreadsheets/d/1KHb05yNB0YNEbGDsBED-Vku-Cs1ZVmdQr6I52ZegNEQ/edit?usp=sharing" target="_blank">View Signups</a>
         </div>
@@ -480,8 +480,9 @@
                         </div>
                         <div class="nav-group__content">
                             <ul>
-                                <li>TBD</li>
-                                <li>TBD</li>
+                                <li>Sprint originally intended to be 3 rounds, but it was dicovered at the last minute that odd-numbers of rounds only "work" when there is an even number of players. Even Round count works almost unconditionally. </li>
+                                <li>Participant "theNagraj" lacked minimum required games to register (API discovered 42/100). Exception granted due to returning player, and aoe2.gg web interface indicating 52 games at time of registration. Player may compete for prize. </li>
+                                <li>Participant "Belkross"  lacked minimum required games to register (API discovered 12/100). Exception granted due to referral, and aoe2.gg web interface indicated 87 games at time of registration. Player may compete for prize.</li>
                             </ul>
                         </div>
                     </div>
