updated resources links

--- a/ALS9.html
+++ b/ALS9.html
@@ -487,10 +487,10 @@
                         </div>
                     </div>
                     <div class="buttons-container">
-                        <a href="#" target="_blank" download>Registration</a>
-                        <a href="#" target="_blank" download>Seeding</a>
-                        <a href="#" target="_blank">Live Scoreboard</a>
-                        <a href="#" target="_blank" download>Results</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS9_Resources/Sprint1/Registration.ods" target="_blank" download>Registration</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS9_Resources/Sprint1/Seeding.ods" target="_blank" download>Seeding</a>
+                        <a href="https://docs.google.com/spreadsheets/d/13AghNzsmjMC5XDxC5CbCQSZD3G6EQtyjteD9k2glyNk/edit?gid=807253230#gid=807253230" target="_blank">Live Scoreboard</a>
+                        <a href="https://raw.githubusercontent.com/Alchemy-AOE-Community/Alchemy-AOE-Community.github.io/main/ALS9_Resources/Sprint1/Results.ods" target="_blank" download>Results</a>
                     </div>
                     <div class="nav-group seeding" aria-label="Seeding section" role="region">
                         <div class="nav-group__title">
