fixed civ draft link

--- a/ALS9.html
+++ b/ALS9.html
@@ -53,7 +53,7 @@
             <a class="resource-link" data-file="#" download>No Map Contest</a>
             <a href="#" target="_blank">No Map Draft</a>
             <a class="resource-link" data-file="Map_Archive.zip" download>Map Archive</a>
-            <a href="https://aoe2cm.net/preset/HqkjX" target="_blank">Civilization Draft</a>
+            <a href=" https://aoe2cm.net/preset/kjKVQ" target="_blank">Civilization Draft</a>
             <a href="https://forms.gle/1LDUBw6x2HS1QMfJA" target="_blank">Sign Up</a>
             <a href="https://docs.google.com/spreadsheets/d/1KHb05yNB0YNEbGDsBED-Vku-Cs1ZVmdQr6I52ZegNEQ/edit?usp=sharing" target="_blank">View Signups</a>
         </div>
