Minor website tweaks. Release of information pertaining to ALS9 Sprint 2

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
             <div class="nav-group__content">
                 <p>The Alchemy AOE Community is a free and non-profit organization of random map scripters, tournament hosts, content creators, and skilled players dedicated to the advancement of custom random maps in Age of Empires II: Definitive Edition.</p>
-                <p>We are independent from the official Age of Empires developers, allowing us to prioritize creativity and free expression over marketing returns.</p>
+                <p>Age of Empires II is a registered trademark of the Microsoft Corporation.</p>
             </div>
         </section>
         <section class="nav-group mission">
